--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fastify/swagger": "^9.7.0",
     "@fastify/swagger-ui": "^5.2.5",
     "@types/pg": "^8.16.0",
+    "drizzle-orm": "^0.45.1",
     "fastify": "^5.7.4",
     "ioredis": "^5.9.3",
     "pg": "^8.18.0",
