--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "bun run src/index.ts",
     "dev": "bun run --watch src/index.ts",
     "clean": "rm -rf dist src/utils/embedded-scripts.ts",
-    "prepare": "husky"
+    "prepare": "husky",
+    "migrate": "drizzle-kit generate && npx drizzle-kit migrate"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.4.1",
     "@commitlint/config-conventional": "^20.4.1",
     "@types/bun": "latest",
+    "drizzle-kit": "^0.31.9",
     "husky": "^9.1.7"
   },
   "peerDependencies": {
@@ -26,10 +28,12 @@
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/swagger": "^9.7.0",
     "@fastify/swagger-ui": "^5.2.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/pg": "^8.16.0",
     "drizzle-orm": "^0.45.1",
     "fastify": "^5.7.4",
     "ioredis": "^5.9.3",
+    "jsonwebtoken": "^9.0.3",
     "pg": "^8.18.0",
     "redis": "^5.10.0",
     "winston": "^3.19.0"
